# duckietown-intnav

./: .gitignore  Makefile  Pipfile  README.md
.circleci/: config.yml
docker/: .dockerignore  Dockerfile  build.bash  build_docker.bash  env.sh  requirements.txt  run_docker.bash
lib-intnav/: .bumpversion.cfg  .coveragerc  MANIFEST.in  Makefile  requirements.txt  setup.py
lib-unicorn/: .bumpversion.cfg  .coveragerc  MANIFEST.in  setup.py
ros-intnav/: CMakeLists.txt  package.xml  setup.py
ros-intnav/config/: apriltags.yaml  duckiebot.xacro  duckiebot.yaml  duckies.xacro  rviz.rviz  rvizwo.rviz
ros-intnav/config/meshes/: duck.dae
ros-intnav/launch/: april_localization.launch  calibration_check.launch  controlling.launch  image_preprocessing.launch  imap_server.launch  interface.launch  localization.launch  main.launch  server.launch  test_initialization.launch  test_visualization.launch  tf_tree.launch  visualization.launch
ros-intnav/nodes/: april_activator.py  april_tf_static.py  calibration_check.py  controller.py  image_processing.py  imap_server.py  imap_visualization.py  interface.py  interface_stopline.py  itype_control.py  keyboard.py  localization.py  node.py  path_planner.py  rect.py  tf_static.py  tf_to_pose.py  tf_to_pose_node.py  visualization_imap.py
ros-intnav/test/: imap_server.launch  imap_server.py  publish_trajectory.py  publish_type.py  test_initialization.launch  test_visualization.launch
ros-unicorn/: package.xml  setup.py
scripts/: connect_roscore.bash  deploy.bash  deploy_lane_follower.bash  run_docker.bash  run_visualization.bash  (+2 more)
(+50 files in other folders)
