<package>
  <name>duckietown-intnav</name>
  <version>0.0.1</version>
  <description>
    Reliable and Efficient mono-vision-based intersection navigation. 
  </description>
  <maintainer email="sischaef@ethz.ch">Simon Schaefer</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>apriltag2_ros</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>apriltag2_ros</run_depend>

</package>
